# imapsync-gui

./: .gitmodules  CMakeLists.txt  ImapSyncCommand.cpp  MainFrame.cpp  MainFrame.h  MainFrameHandlers.cpp  MainFrameHandlers.h  README.md  VersionFinder.cpp  main.cpp  mainform.fbp
resources/: Info.plist  imapsync-ui.icns
sources/: CMakeLists.txt  ImapSyncCommand.h  MainFrame.cpp  MainFrame.h  MainFrameHandlers.cpp  MainFrameHandlers.h  VersionFinder.h  main.cpp  mainform.fbp
